--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "draft-js-markdown-plugin",
-  "version": "3.0.5",
+  "name": "@zacapa/draft-js-markdown-plugin",
+  "version": "1.0.0",
   "description": "A DraftJS plugin for supporting Markdown syntax shortcuts, fork of draft-js-markdown-shortcuts-plugin",
   "main": "lib/index.js",
   "scripts": {
     "build": "npm run clean && npm run build:js",
     "build:demo": "NODE_ENV=production webpack --config demo/webpack.config.prod.js && rm -rf demo/public/css && cp -R demo/publicTemplate/* demo/public/",
     "build:js": "BABEL_DISABLE_CACHE=1 BABEL_ENV=production NODE_ENV=production node_modules/.bin/babel --out-dir='lib' --ignore='**/__test__/*' src",
-    "clean": "node_modules/.bin/rimraf lib; node_modules/.bin/rimraf demo/public",
-    "dev": "node_modules/.bin/babel-node ./demo/server.js",
+    "clean": "rimraf lib; node_modules/.bin/rimraf demo/public",
+    "dev": "babel-node ./demo/server.js",
     "test": "jest",
     "precommit": "jest && lint-staged"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/withspectrum/draft-js-markdown-plugin.git"
+    "url": "git+https://github.com/stojanovic/draft-js-markdown-plugin.git"
   },
   "keywords": [
     "draftjs",
@@ -22,12 +22,11 @@
     "plugin",
     "markdown"
   ],
-  "author": "Max Stoiber <contact@mxstbr.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/withspectrum/draft-js-markdown-plugin/issues"
+    "url": "https://github.com/stojanovic/draft-js-markdown-plugin/issues"
   },
-  "homepage": "https://github.com/withspectrum/draft-js-markdown-plugin#readme",
+  "homepage": "https://github.com/stojanovic/draft-js-markdown-plugin#readme",
   "lint-staged": {
     "*.{js,css}": [
       "prettier --write",
@@ -51,7 +50,7 @@
     "css-loader": "^0.26.0",
     "css-modules-require-hook": "^4.2.3",
     "draft-js-plugins-editor": "2.0.0-rc2",
-    "draft-js-prism": "ngs/draft-js-prism#6edb31c3805dd1de3fb897cc27fced6bac1bafbb",
+    "draft-js-prism": "github:ngs/draft-js-prism#6edb31c3805dd1de3fb897cc27fced6bac1bafbb",
     "enzyme": "^2.6.0",
     "eslint": "^3.11.1",
     "eslint-config-airbnb": "^13.0.0",
@@ -103,10 +102,14 @@
   ],
   "dependencies": {
     "decorate-component-with-props": "^1.1.0",
-    "draft-js": "^0.10.4",
+    "draft-js": "^0.11.3",
     "draft-js-checkable-list-item": "^2.0.6",
     "draft-js-prism-plugin": "^0.1.3",
     "immutable": "~3.7.4",
     "react-click-outside": "^3.0.1"
-  }
+  },
+  "directories": {
+    "lib": "lib"
+  },
+  "author": "Slobodan Stojanović <slobodan@cloudhorizon.com> (http://slobodan.me)"
 }
